<resources>
    <string name="app_name">Desa Wisata KarangAsem</string>

    <!--  Text Login Page  -->
    <string name="judul">Selamat datang kembali</string>
    <string name="deskripsi">Sign in untuk melanjutkan</string>
    <string name="hint_email">Alamat Email</string>
    <string name="hint_password">Password</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="label_button">Sign In</string>
    <string name="belum_punya">Belum Punya Akun?</string>
    <string name="daftar_sekarang">Daftar Sekarang!</string>
    <!--  Text Login Page  -->

    <!--  Text Register Page  -->
    <string name="judul_register">Create an Account</string>
    <string name="hint_nama">Nama</string>
</resources>