<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="35dp"
        android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="88dp"
        android:padding="10dp"
        android:background="@drawable/logodesa"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judul"
            android:fontFamily="@font/poppins_bold"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="55dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_loginEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="40dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/error"
            app:errorTextColor="@color/error"
            android:hint="@string/hint_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEmail"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:ems="10"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_loginPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="5dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/error"
            app:errorTextColor="@color/error"
            android:hint="@string/hint_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Lupa Password"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="50dp"
        android:text="@string/label_button"
        android:fontFamily="@font/poppins_bold"
        android:backgroundTint="@color/bg_warna"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_warna"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="35dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center"
           android:textColor="@color/black"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/signupRedirectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar_sekarang"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/bg_warna"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:textSize="16sp"/>

    </LinearLayout>



</LinearLayout>